--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -1,29 +1,12 @@
 {
-  "jaina:Strike": {
-    "NAME": "打击",
-    "DESCRIPTION": "造成 !D! 点伤害。"
+  "jaina:ArcaneExplosion": {
+    "NAME": "魔爆术",
+    "DESCRIPTION": "对所有敌人造成 !D! 点伤害。",
+    "UPGRADE_DESCRIPTION": "对所有敌人造成 !D! 点伤害。 NL 抽 !M! 张牌。"
   },
-  "jaina:Defend": {
-    "NAME": "防御",
-    "DESCRIPTION": "获得 !B! 点 格挡 。"
-  },
-  "jaina:Fireball": {
-    "NAME": "火球术",
-    "DESCRIPTION": "造成 !D! 点伤害。"
-  },
-  "jaina:Frostbolt": {
-    "NAME": "寒冰箭",
-    "DESCRIPTION": "造成 !D! 点伤害并 jaina:冻结 敌人。"
-  },
-  "jaina:Counterspell": {
-    "NAME": "法术反制",
-    "DESCRIPTION": "获得1层 无实体 、1层 缓冲 或者1层 人工制品 。 NL 虚无 。",
-    "UPGRADE_DESCRIPTION": "获得1层 无实体 、1层 缓冲 或者1层 人工制品 。",
-    "EXTENDED_DESCRIPTION": [
-      "获得1层 无实体 ",
-      "获得1层 缓冲 ",
-      "获得1层 人工制品 "
-    ]
+  "jaina:ArcaneIntellect": {
+    "NAME": "奥术智慧",
+    "DESCRIPTION": "抽 !M! 张牌。"
   },
   "jaina:ArcaneMissiles": {
     "NAME": "奥术飞弹",
@@ -34,17 +17,75 @@
     "NAME": "奥术弹",
     "DESCRIPTION": "造成 !D! 点伤害。 NL 消耗 。"
   },
-  "jaina:ArcaneIntellect": {
-    "NAME": "奥术智慧",
-    "DESCRIPTION": "抽 !M! 张牌。"
+  "jaina:Blizzard": {
+    "NAME": "暴风雪",
+    "DESCRIPTION": "对所有敌人造成 !D! 点伤害并 jaina:冻结 敌人"
   },
-  "jaina:ArcaneExplosion": {
-    "NAME": "魔爆术",
-    "DESCRIPTION": "对所有敌人造成 !D! 点伤害。",
-    "UPGRADE_DESCRIPTION": "对所有敌人造成 !D! 点伤害。 NL 抽 !M! 张牌。"
+  "jaina:ConeOfCold": {
+    "NAME": "冰锥术",
+    "DESCRIPTION": "对所有敌人造成 !D! 点伤害并获得 !B! 点 格挡 。"
+  },
+  "jaina:Counterspell": {
+    "NAME": "法术反制",
+    "DESCRIPTION": "获得1层 无实体 、1层 缓冲 NL 或者1层 人工制品 。 NL 虚无 。",
+    "UPGRADE_DESCRIPTION": "获得1层 无实体 、1层 缓冲 NL 或者1层 人工制品 。 NL 消耗 。",
+    "EXTENDED_DESCRIPTION": [
+      "获得1层 无实体 ",
+      "获得1层 缓冲 ",
+      "获得1层 人工制品 "
+    ]
+  },
+  "jaina:Defend": {
+    "NAME": "防御",
+    "DESCRIPTION": "获得 !B! 点 格挡 。"
+  },
+  "jaina:Fireball": {
+    "NAME": "火球术",
+    "DESCRIPTION": "造成 !D! 点伤害。"
   },
   "jaina:Flamecannon": {
     "NAME": "烈焰轰击",
     "DESCRIPTION": "随机对一个敌人造成 !D! 点伤害。"
+  },
+  "jaina:Flamestrike": {
+    "NAME": "烈焰风暴",
+    "DESCRIPTION": "对所有敌人造成 !D! 点伤害2次。"
+  },
+  "jaina:Frostbolt": {
+    "NAME": "寒冰箭",
+    "DESCRIPTION": "造成 !D! 点伤害并 jaina:冻结 敌人。"
+  },
+  "jaina:FrostNova": {
+    "NAME": "冰霜新星",
+    "DESCRIPTION": " jaina:冻结 所有敌人。 消耗 。",
+    "UPGRADE_DESCRIPTION": " jaina:冻结 所有敌人。"
+  },
+  "jaina:IceBarrier": {
+    "NAME": "寒冰护体",
+    "DESCRIPTION": "当你受到攻击时获得 !B! 点 格挡 。"
+  },
+  "jaina:IceBlock": {
+    "NAME": "寒冰屏障",
+    "DESCRIPTION": "当你受到致命伤害时，防止该伤害。"
+  },
+  "jaina:IceLance": {
+    "NAME": "冰枪术",
+    "DESCRIPTION": "对 jaina:冻结 的敌人造成 !D! 点伤害。 NL 若敌人未被 jaina:冻结 ， NL 则 jaina:冻结 敌人"
+  },
+  "jaina:Pyroblast": {
+    "NAME": "炎爆术",
+    "DESCRIPTION": "造成 !D! 点伤害。"
+  },
+  "jaina:SpringWater": {
+    "NAME": "清凉的泉水",
+    "DESCRIPTION": "抽 !M! 张牌。 NL 每抽到一张技能牌，获得一点 [E] 。"
+  },
+  "jaina:Strike": {
+    "NAME": "打击",
+    "DESCRIPTION": "造成 !D! 点伤害。"
+  },
+  "jaina:Vaporize": {
+    "NAME": "蒸发",
+    "DESCRIPTION": "获得 !B! 点 格挡 。 NL 你下一次受到攻击时对目标造成 !D! 点伤害。"
   }
 }
