--- a/src/main/resources/Jaina/localization/ZHS/powers.json
+++ b/src/main/resources/Jaina/localization/ZHS/powers.json
@@ -1,8 +1,39 @@
 {
-  "jaina:Frozen": {
+  "jaina:FrozenPower": {
     "NAME": "冻结",
     "DESCRIPTIONS": [
       "被 #b冻结 的角色失去他的下一次行动机会。 NL #b冻结 效果不能叠加。"
     ]
+  },
+  "jaina:IceBarrierPower": {
+    "NAME": "寒冰护甲",
+    "DESCRIPTIONS": [
+      "在你受到攻击时获得12点护甲。 NL 受到一次攻击仅触发一次。"
+    ]
+  },
+  "jaina:IceBarrierPowerP": {
+    "NAME": "寒冰护甲+",
+    "DESCRIPTIONS": [
+      "在你受到攻击时获得16点护甲。 NL 受到一次攻击仅触发一次。"
+    ]
+  },
+  "jaina:IceBlockPower": {
+    "NAME": "寒冰屏障",
+    "DESCRIPTIONS": [
+      "防止你受到的一次致命攻击。"
+    ]
+  },
+  "jaina:VaporizePower": {
+  "NAME": "蒸发",
+  "DESCRIPTIONS": [
+    "在你受到攻击时对攻击者造成9点伤害。 NL 受到一次攻击仅触发一次。"
+    ]
+  },
+  "jaina:VaporizePowerP": {
+    "NAME": "蒸发+",
+    "DESCRIPTIONS": [
+      "在你受到攻击时对攻击者造成12点伤害。 NL 受到一次攻击仅触发一次。"
+    ]
   }
+
 }
