修改初始卡组，“寒冰箭”和“火焰冲击”成为基本卡。

--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -107,5 +107,9 @@
   "jaina:Evocation": {
     "NAME": "唤醒",
     "DESCRIPTION": "jaina:法术伤害 + !M! 。"
+  },
+  "jaina:Fireblast": {
+    "NAME": "火焰冲击",
+    "DESCRIPTION": "造成 !D! 点伤害。 NL 将一张 *灼伤 置入的你手牌。"
   }
 }
