添加了烧伤关键词和能力。

--- a/src/main/resources/Jaina/localization/ZHS/keywords.json
+++ b/src/main/resources/Jaina/localization/ZHS/keywords.json
@@ -10,5 +10,11 @@
       "法术伤害"
     ],
     "DESCRIPTION": "提高法术造成的伤害或增强其他效应。"
+  },
+  {
+    "NAMES": [
+      "烧伤"
+    ],
+    "DESCRIPTION": "被 #r烧伤 的敌人在回合结束时失去生命值。"
   }
 ]
