--- a/src/main/resources/Jaina/localization/ZHS/powers.json
+++ b/src/main/resources/Jaina/localization/ZHS/powers.json
@@ -55,5 +55,12 @@
       "你在每回合打出的第",
       "张法术牌耗能变为 #b0 。"
     ]
+  },
+  "jaina:FlameWardPower": {
+    "NAME": "火焰结界",
+    "DESCRIPTIONS": [
+      "受到攻击时，给予所有敌人",
+      "层 #r烧伤 。"
+    ]
   }
 }
