--- a/src/main/resources/Jaina/localization/ZHS/keywords.json
+++ b/src/main/resources/Jaina/localization/ZHS/keywords.json
@@ -16,5 +16,17 @@
       "烧伤"
     ],
     "DESCRIPTION": "被 #r烧伤 的敌人在回合结束时失去生命值。"
+  },
+  {
+    "NAMES": [
+      "即逝"
+    ],
+    "DESCRIPTION": "在战斗结束前被移除出牌组。 NL 不会被放入消耗牌堆。"
+  },
+  {
+    "NAMES": [
+      "自动释放"
+    ],
+    "DESCRIPTION": "抽到时自动使用。"
   }
 ]
