--- a/src/main/resources/Jaina/localization/ZHS/keywords.json
+++ b/src/main/resources/Jaina/localization/ZHS/keywords.json
@@ -28,5 +28,11 @@
       "自动释放"
     ],
     "DESCRIPTION": "抽到时自动使用。"
+  },
+  {
+    "NAMES": [
+      "发现"
+    ],
+    "DESCRIPTION": "从三张卡牌中选择一张加入你的手牌。"
   }
 ]
