添加了巨龙之怒、初始之火及传承之火、炎枪术

--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -52,15 +52,15 @@
   },
   "jaina:Fireball": {
     "NAME": "火球术",
-    "DESCRIPTION": "造成 !D! 点伤害。 NL 将一张 *灼伤 放入你的弃牌堆中。"
+    "DESCRIPTION": "造成 !D! 点伤害。 NL jaina:烧伤 ： *1 。"
   },
   "jaina:Flamecannon": {
     "NAME": "烈焰轰击",
-    "DESCRIPTION": "随机对一个敌人造成 !D! 点伤害。 NL 将一张 *灼伤 放入你的弃牌堆中。"
+    "DESCRIPTION": "随机对一个敌人造成 !D! 点伤害。 NL jaina:烧伤 ： *1 。"
   },
   "jaina:Flamestrike": {
     "NAME": "烈焰风暴",
-    "DESCRIPTION": "对所有敌人造成 !D! 点伤害2次。 NL 将一张 *灼伤 放入你的弃牌堆中。"
+    "DESCRIPTION": "对所有敌人造成 !D! 点伤害2次。 NL jaina:烧伤 ： *2 。"
   },
   "jaina:FrostNova": {
     "NAME": "冰霜新星",
@@ -90,7 +90,7 @@
   },
   "jaina:Pyroblast": {
     "NAME": "炎爆术",
-    "DESCRIPTION": "造成 !D! 点伤害。 NL 将 !M! *灼伤 放入你的弃牌堆中。"
+    "DESCRIPTION": "造成 !D! 点伤害。 NL jaina:烧伤 ： *3 。"
   },
   "jaina:SpringWater": {
     "NAME": "清凉的泉水",
@@ -110,7 +110,7 @@
   },
   "jaina:Fireblast": {
     "NAME": "火焰冲击",
-    "DESCRIPTION": "造成 !D! 点伤害。 NL 将一张 *灼伤 放入你的弃牌堆中。"
+    "DESCRIPTION": "造成 !D! 点伤害。 NL jaina:烧伤 ： *1 。"
   },
   "jaina:ArcaneBlast": {
     "NAME": "奥术冲击",
@@ -130,7 +130,7 @@
   },
   "jaina:Combustion": {
     "NAME": "燃烧",
-    "DESCRIPTION": "造成 !D! 点伤害。 NL 给予其他敌人 !M! 层 jaina:烧伤 。"
+    "DESCRIPTION": "造成 !D! 点伤害。 NL 给予其他敌人 !M! 层 jaina:燃烧 。"
   },
   "jaina:IncantersFlow": {
     "NAME": "咒术洪流",
@@ -146,8 +146,8 @@
   },
   "jaina:FrozenClone": {
     "NAME": "寒冰克隆",
-    "DESCRIPTION": "获得 格挡 X 次，数值等于目标的攻击力。",
-    "UPGRADE_DESCRIPTION": "获得 格挡 X+1 次，数值等于目标的攻击力。",
+    "DESCRIPTION": "获得 格挡 X次，数值等于目标的攻击力。",
+    "UPGRADE_DESCRIPTION": "获得 格挡 X+1次，数值等于目标的攻击力。",
     "EXTENDED_DESCRIPTION": [
       "这名敌人的意图不是 #r攻击。 "
     ]
@@ -166,7 +166,7 @@
   },
   "jaina:FlameWard": {
     "NAME": "火焰结界",
-    "DESCRIPTION": "获得 !B! 点 格挡。 NL 每当受到攻击，给予所有敌人 !M! 层 jaina:烧伤 。"
+    "DESCRIPTION": "获得 !B! 点 格挡。 NL 每当受到攻击，给予所有敌人 !M! 层 jaina:燃烧 。"
   },
   "jaina:FrostAffinity": {
     "NAME": "冰霜亲和",
@@ -203,6 +203,24 @@
   "jaina:DragonsBreath": {
     "NAME": "龙息术",
     "DESCRIPTION": "造成 !D! 点伤害。 NL 如果手牌中只有火焰卡牌，这张牌在本回合的耗能变为0点。"
+  },
+  "jaina:DragonsFury": {
+    "NAME": "巨龙之怒",
+    "DESCRIPTION": "对所有敌人造成 !D! 点伤害X次。 NL jaina:烧伤 ： *X 。"
+  },
+  "jaina:FirstFlame": {
+    "NAME": "初始之火",
+    "DESCRIPTION": "造成 !D! 点伤害。将一张 *传承之火 置入你的手牌。",
+    "UPGRADE_DESCRIPTION": "造成 !D! 点伤害。将一张 *传承之火+ 置入你的手牌。"
+  },
+  "jaina:SecondFlame": {
+    "NAME": "传承之火",
+    "DESCRIPTION": "保留 。 NL 造成 !D! 点伤害。 NL 消耗 。"
+  },
+  "jaina:FlameLance": {
+    "NAME": "炎枪术",
+    "DESCRIPTION": "造成 !D! 点伤害。 NL 未被格挡的伤害造成 jaina:燃烧 。 NL jaina:烧伤 ： *1 。"
   }
+
 
 }
