--- a/src/main/resources/Jaina/localization/ZHS/keywords.json
+++ b/src/main/resources/Jaina/localization/ZHS/keywords.json
@@ -13,9 +13,9 @@
   },
   {
     "NAMES": [
-      "烧伤"
+      "燃烧"
     ],
-    "DESCRIPTION": "被 #r烧伤 的敌人在回合结束时失去生命值。"
+    "DESCRIPTION": "具有 #r燃烧 的敌人在回合结束时失去生命值。"
   },
   {
     "NAMES": [
@@ -34,5 +34,11 @@
       "发现"
     ],
     "DESCRIPTION": "从三张卡牌中选择一张加入你的手牌。"
+  },
+  {
+    "NAMES": [
+      "烧伤"
+    ],
+    "DESCRIPTION": "将若干张 #r灼烧 放入你的弃牌堆中。"
   }
 ]
