--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -147,10 +147,7 @@
   "jaina:FrozenClone": {
     "NAME": "寒冰克隆",
     "DESCRIPTION": "获得 格挡 X次，数值等于目标的攻击力。",
-    "UPGRADE_DESCRIPTION": "获得 格挡 X+1次，数值等于目标的攻击力。",
-    "EXTENDED_DESCRIPTION": [
-      "这名敌人的意图不是 #r攻击。 "
-    ]
+    "UPGRADE_DESCRIPTION": "获得 格挡 X+1次，数值等于目标的攻击力。"
   },
   "jaina:IceShield": {
     "NAME": "冰盾术",
@@ -257,6 +254,11 @@
     "NAME": "野火",
     "DESCRIPTION": "每当你给予 jaina:燃烧 时，额外给予3层。",
     "UPGRADE_DESCRIPTION": "每当你给予 jaina:燃烧 时，额外给予一倍的层数。"
+  },
+  "jaina:MirrorEntity": {
+    "NAME": "镜像实体",
+    "DESCRIPTION": "复制一名敌人的攻击方式，对其造成伤害。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "复制一名敌人的攻击方式，对其造成伤害。"
   }
 
 
