--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -184,8 +184,7 @@
   },
   "jaina:HotStreak": {
     "NAME": "炽热连击",
-    "DESCRIPTION": "在本回合中，你的下一张火焰卡牌消耗减少 *2 点。 NL 消耗 。",
-    "UPGRADE_DESCRIPTION": "在本回合中，你的下一张火焰卡牌消耗减少 *2 点。"
+    "DESCRIPTION": "消耗手牌中所有的 *灼烧，每消耗一张给予所有敌人 !M! 层 jaina:烧伤"
   },
   "jaina:MagicTrick": {
     "NAME": "魔术戏法",
@@ -244,7 +243,7 @@
   },
   "jaina:Scorch": {
     "NAME": "灼烧",
-    "DESCRIPTION": "给予一名敌人 !M! 层 jaina:燃烧 。 NL 在本场战斗中所有 *点燃 的 jaina:燃烧 层数增加2。"
+    "DESCRIPTION": "给予一名敌人 !M! 层 jaina:燃烧 。 NL 在本场战斗中所有 *灼烧 的 jaina:燃烧 层数增加2。"
   },
   "jaina:ShootingStar": {
     "NAME": "迸射流星",
@@ -262,14 +261,46 @@
   },
   "jaina:ManaBind": {
     "NAME": "法术共鸣",
-    "DESCRIPTION": "你的下一张 *奥术 牌打出两次。",
-    "UPGRADE_DESCRIPTION": "你的下两张 *奥术 牌打出两次。"
+    "DESCRIPTION": "在这个回合，你的下一张 *奥术 牌打出两次。",
+    "UPGRADE_DESCRIPTION": "在这个回合，你的下 !M! 张 *奥术 牌打出两次。"
   },
   "jaina:ShiftingScroll": {
     "NAME": "变形卷轴",
     "DESCRIPTION": "这张牌在你的手中每回合开始都会变形成为一张随机吉安娜卡牌。",
     "UPGRADE_DESCRIPTION": "【变形】"
-
+  },
+  "jaina:Simulacrum": {
+    "NAME": "模拟幻影",
+    "DESCRIPTION": "从抽牌堆中选择 !M! 张牌，将这些牌的复制加入你的手牌。 NL 这些牌具有 消耗 。"
+  },
+  "jaina:TomeOfIntellect": {
+    "NAME": "智慧秘典",
+    "DESCRIPTION": "你的抽牌堆中每有 !M! 张牌，获得1层 jaina:法术伤害 。 NL 消耗 。"
+},
+  "jaina:SplittingImage": {
+    "NAME": "裂魂残像",
+    "DESCRIPTION": "在你下一次受到攻击后，获得 !M! 层 无实体 。"
+  },
+  "jaina:WizardArmor": {
+    "NAME": "法师护甲",
+    "DESCRIPTION": "在你的回合结束时，获得 !M! 层 格挡 （受 jaina:法术伤害 影响）。"
+  },
+  "jaina:ApexisBlast": {
+    "NAME": "埃匹希斯冲击",
+    "DESCRIPTION": "造成 !D! 点伤害。 NL 抽 !M! 张牌（受 jaina:法术伤害 影响）。"
+  },
+  "jaina:BookOfSpecters": {
+    "NAME": "怨灵之书",
+    "DESCRIPTION": "抽 !M! 张牌，丢弃抽到的牌中的非攻击牌。"
+  },
+  "jaina:IceShard": {
+    "NAME": "寒冰碎片",
+    "DESCRIPTION": "将 !M! 张 *冰枪术 放入你的手牌。"
+  },
+  "jaina:DeepFreeze": {
+    "NAME": "深度冻结",
+    "DESCRIPTION": "jaina:冻结 所有敌人。 NL 每冻结一名敌人，获得 [E] 并抽一张牌。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "jaina:冻结 所有敌人。 NL 每冻结一名敌人，获得 [E] 并抽一张牌。"
   }
 
 
