添加卡牌：复制、镜像法术、始生研习、护盾术、幸运币、祈愿术

--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -81,7 +81,7 @@
   },
   "jaina:IceLance": {
     "NAME": "冰枪术",
-    "DESCRIPTION": "对 jaina:冻结 的敌人造成 !D! 点伤害。 NL 若敌人未被 jaina:冻结 ，则 jaina:冻结 敌人并 消耗 。"
+    "DESCRIPTION": "对 jaina:冻结 的敌人造成 !D! 点伤害。 NL 若敌人未被冻结 ，则 jaina:冻结 敌人并 消耗 。"
   },
   "jaina:ManaBiscuit": {
     "NAME": "法力饼干",
@@ -106,7 +106,7 @@
   },
   "jaina:Evocation": {
     "NAME": "唤醒",
-    "DESCRIPTION": "jaina:法术伤害 + !M! 。"
+    "DESCRIPTION": "每回合开始时获得 jaina:法术伤害 + !M! 。"
   },
   "jaina:Fireblast": {
     "NAME": "火焰冲击",
@@ -126,7 +126,7 @@
   },
   "jaina:Cinderstorm": {
     "NAME": "燃烬风暴",
-    "DESCRIPTION": "消耗手牌中所有的 *灼烧 ，每张给予所有敌人 !M! 层 jaina:烧伤 。"
+    "DESCRIPTION": "消耗手牌中所有的 *灼伤 ，每张给予所有敌人 !M! 层 jaina:烧伤 。"
   },
   "jaina:Combustion": {
     "NAME": "燃烧",
@@ -150,7 +150,7 @@
     "UPGRADE_DESCRIPTION": "获得 格挡 X+1次，数值等于目标的攻击力。"
   },
   "jaina:IceWall": {
-    "NAME": "冰墙术",
+    "NAME": "冰墙",
     "DESCRIPTION": "每有一名敌人，获得 !B! 点 格挡 。"
   },
   "jaina:FrostArmor": {
@@ -180,7 +180,8 @@
   },
   "jaina:FontOfPower": {
     "NAME": "能量之泉",
-    "DESCRIPTION": "获得 !M! 点 [E] NL （受 jaina:法术伤害 加成）。"
+    "DESCRIPTION": "获得 !M! 点 [E] NL （受 jaina:法术伤害 加成）。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "获得 !M! 点 [E] NL （受 jaina:法术伤害 加成）。"
   },
   "jaina:HotStreak": {
     "NAME": "炽热连击",
@@ -198,7 +199,7 @@
   },
   "jaina:DragonsBreath": {
     "NAME": "龙息术",
-    "DESCRIPTION": "造成 !D! 点伤害。 NL 如果手牌中只有火焰卡牌，这张牌在本回合的耗能变为0点。"
+    "DESCRIPTION": "造成 !D! 点伤害。 NL 如果手牌中只有火焰牌，这张牌的耗能变为0点。"
   },
   "jaina:DragonsFury": {
     "NAME": "巨龙之怒",
@@ -227,7 +228,7 @@
   },
   "jaina:Icicle": {
     "NAME": "冰刺",
-    "DESCRIPTION": "造成 !D! 点伤害。 NL 若敌人被 jaina:冻结 ，则抽1张牌。"
+    "DESCRIPTION": "抽1张牌。 NL 若敌人被 jaina:冻结 ，则造成 !D! 点伤害。"
   },
   "jaina:Ignite": {
     "NAME": "点燃",
@@ -283,11 +284,11 @@
   },
   "jaina:WizardArmor": {
     "NAME": "法师护甲",
-    "DESCRIPTION": "在你的回合结束时，获得 !M! 层 格挡 （受 jaina:法术伤害 影响）。"
+    "DESCRIPTION": "在你的回合结束时，获得 !M! 点 格挡 （受 jaina:法术伤害 加成）。"
   },
   "jaina:ApexisBlast": {
     "NAME": "埃匹希斯冲击",
-    "DESCRIPTION": "造成 !D! 点伤害。 NL 抽 !M! 张牌（受 jaina:法术伤害 影响）。"
+    "DESCRIPTION": "造成 !D! 点伤害。 NL 抽 !M! 张牌（受 jaina:法术伤害 加成）。"
   },
   "jaina:BookOfSpecters": {
     "NAME": "怨灵之书",
@@ -304,7 +305,7 @@
   },
   "jaina:FrozenTouch": {
     "NAME": "冻寒之触",
-    "DESCRIPTION": "造成 !D! 点伤害并 jaina:冻结 敌人 。 NL 消耗性： !M! 。"
+    "DESCRIPTION": "造成 !D! 点伤害并 jaina:冻结 敌人 。 NL 使用 !M! 次后 消耗 。"
   },
   "jaina:ArcaneGate": {
     "NAME": "奥术之门",
@@ -315,7 +316,38 @@
     "DESCRIPTION": "对所有被 jaina:冻结 的敌人造成 !D! 点伤害。"
   },
   "jaina:ArcticArmor": {
-    "NAME": "极寒护甲",
+    "NAME": "寒甲术",
     "DESCRIPTION": "每当你使用一张 *冰霜 牌，获得 !M! 点 格挡 。"
+  },
+  "jaina:Duplicate": {
+    "NAME": "复制",
+    "DESCRIPTION": "将你手牌中的一张牌复制一张。 NL （不能复制 *复制 。）",
+    "UPGRADE_DESCRIPTION": "将你手牌中的一张牌复制两张。 NL （不能复制 *复制 。）"
+  },
+  "jaina:Wish": {
+    "NAME": "祈愿术",
+    "DESCRIPTION": "选择一张吉安娜牌加入你的手牌。 NL 这张牌在本回合的耗能变为0点。 NL 消耗 。",
+    "UPGRADE_DESCRIPTION": "选择一张升级过的吉安娜牌加入你的手牌。 NL 这张牌在本回合的耗能变为0点。 NL 消耗 。"
+  },
+  "jaina:MirrorImage": {
+    "NAME": "镜像法术",
+    "DESCRIPTION": "保留 。 NL 获得 !B! 点 格挡 。"
+  },
+  "jaina:PrimordialStudies": {
+    "NAME": "始生研习",
+    "DESCRIPTION": "jaina:法术伤害 + !M! 。",
+    "UPGRADE_DESCRIPTION": "固有 。 NL jaina:法术伤害 + !M! 。"
+  },
+  "jaina:Shield": {
+    "NAME": "护盾术",
+    "DESCRIPTION": "获得 !B! 点 格挡 。 NL 抽 !M! 张牌。"
+  },
+  "jaina:TheCoin": {
+    "NAME": "幸运币",
+    "DESCRIPTION": "保留 。 NL 获得 [E] 。 NL 消耗 。"
+  },
+  "jaina:ArcaneBrilliance": {
+    "NAME": "奥术光辉",
+    "DESCRIPTION": "jaina:法术伤害 + !M! 。 NL 你的回合结束时， jaina:法术伤害 - !M! 。"
   }
 }
