--- a/src/main/resources/Jaina/localization/ZHS/keywords.json
+++ b/src/main/resources/Jaina/localization/ZHS/keywords.json
@@ -9,7 +9,7 @@
     "NAMES": [
       "法术伤害"
     ],
-    "DESCRIPTION": "提高法术造成的伤害或增强其他效应。"
+    "DESCRIPTION": "提高法术造成的伤害和获得的格挡，或增强其他效应。"
   },
   {
     "NAMES": [
