重构：基于AbstractJainaCard继承了三个子类，分别加上三种CardTags和Descriptors，使得卡牌ui上可以显示这张卡是属于哪种类型的卡（奥术/火焰/冰霜）。同时修复了能量之泉、考前刷夜和埃匹希斯冲击的描述更新bug

--- a/src/main/resources/Jaina/localization/ZHS/ui.json
+++ b/src/main/resources/Jaina/localization/ZHS/ui.json
@@ -6,5 +6,20 @@
       "这名敌人的意图不是 #r攻击。 ",
       "选择一张牌"
     ]
+  },
+  "jaina:Fire": {
+    "TEXT": [
+      "火焰"
+    ]
+  },
+  "jaina:Frost": {
+  "TEXT": [
+    "冰霜"
+    ]
+  },
+  "jaina:Arcane": {
+  "TEXT": [
+    "奥术"
+    ]
   }
 }
