--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -267,8 +267,12 @@
   },
   "jaina:ShiftingScroll": {
     "NAME": "变形卷轴",
-    "DESCRIPTION": "这张牌在你的手中每回合开始都会变形成为一张随机吉安娜卡牌。",
-    "UPGRADE_DESCRIPTION": "【变形】"
+    "DESCRIPTION": "保留 。 NL 这张牌在你的手中每回合开始都会变形成为一张随机吉安娜卡牌。",
+    "UPGRADE_DESCRIPTION": "保留 。 固有 。 NL 这张牌在你的手中每回合开始都会变形成为一张随机吉安娜卡牌。",
+    "EXTENDED_DESCRIPTION": [
+      "【变形】",
+      "保留 。 NL "
+    ]
   },
   "jaina:Simulacrum": {
     "NAME": "模拟幻影",
