--- a/src/main/resources/Jaina/localization/ZHS/ui.json
+++ b/src/main/resources/Jaina/localization/ZHS/ui.json
@@ -4,7 +4,8 @@
       "冻结",
       "该敌人被冻结了。",
       "这名敌人的意图不是 #r攻击。 ",
-      "选择一张牌"
+      "选择一张牌",
+      "NL 消耗 。"
     ]
   },
   "jaina:Fire": {
@@ -14,12 +15,12 @@
   },
   "jaina:Frost": {
   "TEXT": [
-    "冰霜"
+      "冰霜"
     ]
   },
   "jaina:Arcane": {
   "TEXT": [
-    "奥术"
+      "奥术"
     ]
   }
 }
